--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ CHANNEL_ID_NGUON=1441020273305321502
 
 # ID kÃªnh báº¡n muá»‘n bot gá»­i tin nháº¯n Ä‘áº¿n (KÃªnh ÄÃ­ch)
 CHANNEL_ID_DICH=1442899585776488478
+ALLOWED_USER_ID=204255221017214977
