--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ CHANNEL_ID_NGUON=1438804172978913301
 
 # ID kÃªnh báº¡n muá»‘n bot gá»­i tin nháº¯n Ä‘áº¿n (KÃªnh ÄÃ­ch)
 CHANNEL_ID_DICH=1442899585776488478
-ALLOWED_USER_ID=204255221017214977
+ALLOWED_USER_ID=
